--- a/Gallery.html
+++ b/Gallery.html
@@ -5,20 +5,38 @@
     <title>Gallery</title>
 </head>
 <body>
-<nav>
-    <a href="google.com">Google Search Home</a><br>
-    <a href="github.com">Github Homepage</a><br>
-    <a href="learn.emobilis-lms.org">eMobilis LMS Page</a>
+
+<div>
+<nav style="font-family: 'Bauhaus 93';color: cornflowerblue">
+    <a href="https://www.google.com/search" target="_blank">Google Search Home</a><br>
+    <a href="https://github.com/signup" target="_blank">Github Homepage</a><br>
+    <a href="https://learn.emobilis-lms.org" target="_blank">eMobilis LMS Page</a>
 </nav>
+</div>
+<p>
+<hr>
+</p>
+
+<div style="padding: 15px">
+    <img src="Images/EA.jpg" alt="Electronic Arts Logo" style="width:400px;height:400px;padding-right: 10px" >
+    <img src="Images/Mashujaa%20Day.jpg" alt="Mashujaa Day Poster" width="400" height="400" style="padding-right: 10px">
+    <img src="Images/Cryptic%20Image.jpg" alt="Several Images In One" width="400" height="400">
+</div>
+</div>
+<p>
+<hr>
+</p>
 
 <div>
-    <img src="images/dancing cat.gif" alt="It's a gif of a dancing cat">
-    <img src="images/happy.gif" alt="It is a thumbs up gif">
-    <img src="images/nice.gif" alt="thumbs up">
+    <img src="images/dancing cat.gif" alt="It's a gif of a dancing cat" width="400" height="400">
+    <img src="Images/dowload%20it.gif" alt="download that shit" style="width: 500px;height: 400px">
+    <img src="images/happy.gif" alt="It is a thumbs up gif" width="400" height="400">
+</div>
+<p>
+<hr>
+</p>
 
-</div><iframe src="https://giphy.com/embed/11JTxkrmq4bGE0" width="480" height="369" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/cat-computer-working-11JTxkrmq4bGE0">via GIPHY</a></p>
-
-<div>
+<div style="padding: 15px">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/pekzpzNCNDQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/X5DHoDVx2Lk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
