modified Elements.html and Vivaldi.html

--- a/Elements.html
+++ b/Elements.html
@@ -16,7 +16,7 @@
 <hr>
 
 <h2>An Ordered List</h2>
-<ol>
+<ol style="list-style-type: lower-roman">
     <li>HTML</li>
     <li>CSS</li>
     <li>JAVA</li>
@@ -40,16 +40,19 @@
 
 <style>
     table {
-        width: 600px;height: 400px;
+        width: 400px;height: 300px;
         background-color: darkgray;
         font-family: "Comic Sans MS";
+        alignment: center;
+        margin-left: 320px;
     }
     
-    td{
-        border: 5px;solid-color: black;
+    td, th{
+        border: 20px;solid-color: black;
         text-align: center;color: aqua;
-        padding: 20px;
-        margin: 30px;
+        padding: 10px;
+        margin: 20px;
+        background-color: blanchedalmond;
     }
 </style>
 
